--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,11 +9,47 @@
   "seo_home_description": "Профессиональные услуги массажа от Элины Соме. Здоровье и баланс благодаря индивидуальному подходу. Массаж спины, массаж всего тела и терапия горячими камнями.",
   "seo_about_title": "Об Элине Соме | Сертифицированный специалист по массажу",
   "seo_about_description": "Узнайте больше об Элине Соме, сертифицированном специалисте по массажу, предоставляющем профессиональный и индивидуальный уход.",
-  "services": [
-    { "name": "Массаж спины", "duration": "30 мин", "price": "30 EUR" },
-    { "name": "Массаж всего тела", "duration": "60 мин", "price": "55 EUR" },
-    { "name": "Глубокий массаж тканей", "duration": "90 мин", "price": "75 EUR" },
-    { "name": "Массаж воротниковой зоны", "duration": "20 мин", "price": "20 EUR" },
-    { "name": "Терапия горячими камнями", "duration": "60 мин", "price": "65 EUR" }
-  ]
+  "services": {
+    "arstnieciska_masaza": [
+      { "name": "Массаж спины", "price": "28€" },
+      { "name": "Воротниковая зона", "price": "23€" },
+      { "name": "Пояснично-крестцовая зона", "price": "23€" },
+      { "name": "Грудной отдел спины", "price": "25€" },
+      { "name": "Массаж грудной клетки", "price": "28€" },
+      { "name": "Массаж одной ноги", "price": "20€" },
+      { "name": "Массаж ноги и бедра", "price": "25€" },
+      { "name": "Массаж одной руки", "price": "23€" },
+      { "name": "Массаж кисти и предплечья", "price": "20€" },
+      { "name": "Массаж стопы и голени", "price": "25€" },
+      { "name": "Классический массаж лица", "price": "28€" },
+      { "name": "Массаж головы", "price": "15€" },
+      { "name": "Массаж всего тела 60 мин.", "price": "60€" },
+      { "name": "Ароматерапевтический массаж 60 мин.", "price": "65€" },
+      { "name": "Массаж горячими камнями", "price": "65€" },
+      { "name": "Ручной лимфодренажный массаж", "price": "55€" },
+      { "name": "Кинезиологическое тейпирование", "price": "10–30€" }
+    ],
+    "masaza_grutniecem": [
+      { "name": "Массаж для беременных 45 мин.", "price": "40€" },
+      { "name": "Массаж для беременных 60 мин.", "price": "50€" },
+      { "name": "Кинезиологическое тейпирование", "price": "10–30€" },
+      { "name": "Кросс-тейп", "price": "1€" }
+    ],
+    "masaza_berniem_un_pusaudziem": [
+      { "name": "Ребенок 1–3 года", "price": "20€" },
+      { "name": "Ребенок 4–7 лет", "price": "23€" },
+      { "name": "Ребенок 8–12 лет", "price": "25€" },
+      { "name": "Ребенок 12–18 лет", "price": "28€" }
+    ],
+    "masaza_zidainiem_no_2_men": [
+      { "name": "Общий массаж для младенцев", "price": "20€" },
+      { "name": "Массаж младенца на дому у клиента", "price": "по договоренности" }
+    ]
+  },
+  "service_categories": {
+    "arstnieciska_masaza": "Лечебный массаж",
+    "masaza_grutniecem": "Массаж для беременных",
+    "masaza_berniem_un_pusaudziem": "Массаж для детей и подростков",
+    "masaza_zidainiem_no_2_men": "Массаж для младенцев (с 2 мес.)"
+  }
 }
