--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,8 @@
 {
   "home_welcome": "Wellness & Balance",
   "home_slogan": "Professional Care by Elīna Some",
+  "nav_home": "Home",
+  "nav_about": "About",
   "contact_me": "Book an Appointment",
   "role": "Certified Specialist",
   "name": "Elīna Some",
