--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,6 +1,8 @@
 {
   "home_welcome": "Labsajūta un Līdzsvars",
   "home_slogan": "Profesionāla aprūpe – Elīna Some",
+  "nav_home": "Sākums",
+  "nav_about": "Par mani",
   "contact_me": "Pieteikt vizīti",
   "role": "Sertificēta speciāliste",
   "name": "Elīna Some",
