--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,8 @@
 {
   "home_welcome": "Здоровье и Баланс",
   "home_slogan": "Профессиональный уход от Элины Соме",
+  "nav_home": "Главная",
+  "nav_about": "Обо мне",
   "contact_me": "Записаться на прием",
   "role": "Сертифицированный специалист",
   "name": "Элина Соме",
