--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,9 @@
 {
-  "home_welcome": "Wellness & Balance",
-  "home_slogan": "Professional Care by Elīna Some",
+  "hero_title": "YOUR HEALTH IS OUR MISSION",
+  "hero_subtitle": "Choose a massage from certified specialists",
+  "hero_insurance": "WE ALSO ACCEPT INSURANCE POLICIES!",
+  "hero_phone": "T. 27404368",
+  "hero_address": "Latgales Street 295 (Doctorate), Kengarags, Riga",
   "nav_home": "Home",
   "nav_about": "About",
   "contact_me": "Book an Appointment",
