--- a/public/locales/lv/translation.json
+++ b/public/locales/lv/translation.json
@@ -1,6 +1,9 @@
 {
-  "home_welcome": "Labsajūta un Līdzsvars",
-  "home_slogan": "Profesionāla aprūpe – Elīna Some",
+  "hero_title": "JŪSU VESELĪBA IR MŪSU MISIJA",
+  "hero_subtitle": "Izvēlies masāžu pie sertificētiem speciālistiem",
+  "hero_insurance": "APKALPOJAM ARĪ APDROŠINĀŠANAS POLISES!",
+  "hero_phone": "T. 27404368",
+  "hero_address": "Latgales iela 295 (Doktorāts), Ķengarags, Rīga",
   "nav_home": "Sākums",
   "nav_about": "Par mani",
   "contact_me": "Pieteikt vizīti",
