--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,9 @@
 {
-  "home_welcome": "Здоровье и Баланс",
-  "home_slogan": "Профессиональный уход от Элины Соме",
+  "hero_title": "ВАШЕ ЗДОРОВЬЕ – НАША МИССИЯ",
+  "hero_subtitle": "Выбирайте массаж у сертифицированных специалистов",
+  "hero_insurance": "ОБСЛУЖИВАЕМ ТАКЖЕ СТРАХОВЫЕ ПОЛИСЫ!",
+  "hero_phone": "Т. 27404368",
+  "hero_address": "ул. Латгалес 295 (Докторат), Кенгарагс, Рига",
   "nav_home": "Главная",
   "nav_about": "Обо мне",
   "contact_me": "Записаться на прием",
